# cppnow-2016-metaprogramming-for-the-brave

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md  index.html  index.in.html  package.json
benchmark/: CMakeLists.txt  metabench.cmake  tuple-gcc.html  tuple.html
benchmark/filter/: CMakeLists.txt  chart.json  filter.good.cpp.erb  filter.naive.cpp.erb  index.html
benchmark/heavy_logical_and/: chart.json  eager.cpp.erb  index.html
benchmark/homogeneous/: CMakeLists.txt  array.cpp.erb  compilation_time-gcc.html  compilation_time.html  execution_time-gcc.html  execution_time.html  tuple.cpp.erb
benchmark/light_logical_and/: eager.cpp.erb  index.html
benchmark/logical_and/: CMakeLists.txt  eager.cpp.erb  heavy-gcc.html  heavy.html  lazy.cpp.erb  light-gcc.html  light.html
benchmark/logical_and/heavy/: eager.cpp.erb  lazy.cpp.erb  recursive.cpp.erb
benchmark/logical_and/light/: chart.json  eager.cpp.erb  lazy.cpp.erb  recursive.cpp.erb
benchmark/make_tuple/: CMakeLists.txt  hana.cpp.erb  make_tuple-gcc.html  make_tuple.html  std.cpp.erb
benchmark/overloading/: CMakeLists.txt  horizontal-gcc.html  horizontal.html  vertical-gcc.html  vertical.html
benchmark/overloading/horizontal/: overloading.cpp.erb  specialization.cpp.erb  template.cpp.erb
benchmark/overloading/vertical/: overloading.cpp.erb  specialization.cpp.erb  template.cpp.erb
benchmark/remove_if/: CMakeLists.txt  compilation_time-gcc.html  compilation_time.html  execution_time-gcc.html  execution_time.html  flat.cpp.erb  recursive.cpp.erb
benchmark/symbols/: CMakeLists.txt  et.cpp.erb  hana_bloat.cpp.erb  hana_bloat_executable_size-gcc.html  hana_bloat_executable_size.html  hana_bloat_link_time-gcc.html  hana_bloat_link_time.html  horizontal.cpp.erb  length.cpp.erb  number.cpp.erb  size-gcc.html  size.html  time-gcc.html  time.html  vertical.cpp.erb
benchmark/tuple/: CMakeLists.txt  aligned_storage.cpp.erb  multiple_inheritance.cpp.erb
benchmark/tuple_cat/: CMakeLists.txt  chart.json  hana.cpp.erb  index-gcc.html  index.html  my_tuple_cat.cpp.erb  std.cpp.erb  std_tuple_cat.cpp.erb
code/: algo.for_each.cpp  algo.transform.cpp  eager_logical_and.cpp  eager_logical_and.hpp  expression_templates.cpp  filter.good.cpp  filter.good.hpp  filter.naive.cpp  filter.naive.hpp  for_each.cpp  homogeneous.cpp  lazy_logical_and.cpp  lazy_logical_and.hpp  my_tuple_cat.cpp  my_tuple_cat.hpp  select.cpp  std_tuple_cat.cpp  std_tuple_cat.hpp  transform.cpp  worksheet.cpp
code/logical_and/: eager.cpp  eager.hpp  lazy.cpp  lazy.hpp  recursive.cpp  recursive.hpp
code/remove_if/: flat.cpp  flat.hpp  recursive.cpp  recursive.hpp
code/tuple/: aligned_storage.cpp  aligned_storage.hpp  aligned_storage_scan.cpp  multiple_inheritance.cpp  multiple_inheritance.hpp
code/tuple_cat/: hana.cpp  hana.hpp  std.cpp  std.hpp
js/: chart.js
plugin/math/: math.js
